# qwebdavlib

./: CMakeLists.txt
qwebdavlib/: qwebdav.cpp  qwebdav.h  qwebdavdirparser.cpp  qwebdavdirparser.h  qwebdavitem.cpp  qwebdavitem.h  qwebdavlib.pro
qwebdavlibExample/: qexample.cpp  qexample.h  qwebdavlibExample.pro
